Fix z-index of user-menu.

--- a/app/assets/stylesheets/board_show.scss
+++ b/app/assets/stylesheets/board_show.scss
@@ -321,7 +321,7 @@
   box-shadow: 0 1px 6px rgba(0,0,0,.15);
   position: absolute;
   width: 300px;
-  z-index: 70;
+  z-index: 200;
   padding-top: 10px;
 }
 
